@@ -339,5 +339,9 @@
 			<GenericName>snappy</GenericName>
 			<PackageName>libsnappy</PackageName>
 		</Package>
+		<Package>
+			<GenericName>vaapi</GenericName>
+			<PackageName>libva</PackageName>
+		</Package>
 	</ExternalDependencies>
 </PhoronixTestSuite>
