@@ -268,5 +268,9 @@
 			<GenericName>wine</GenericName>
 			<PackageName>wine</PackageName>
 		</Package>
+		<Package>
+			<GenericName>vaapi</GenericName>
+			<PackageName>libva</PackageName>
+		</Package>
 	</ExternalDependencies>
 </PhoronixTestSuite>
